team переменные ошибки

--- a/index.html
+++ b/index.html
@@ -155,6 +155,170 @@
         </div>
       </section>
 
+      <section class="section team">
+        <div class="container">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-list__card-item">
+              <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко" />
+
+              <div class="card-content">
+                <h3 class="card-content__staff-title">Игорь Демьяненко</h3>
+                <p class="card-content__staff-text" lang="en">Product Designer</p>
+
+                <ul class="list staff-social-list">
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-list__card-item">
+              <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина" />
+
+              <div class="card-content">
+                <h3 class="card-content__staff-title">Ольга Репина</h3>
+                <p class="card-content__staff-text" lang="en">Frontend Developer</p>
+
+                <ul class="list staff-social-list">
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-list__card-item">
+              <img src="./images/nikolay.jpg" width="270" height="260" alt="Николай Тарасов" />
+
+              <div class="card-content">
+                <h3 class="card-content__staff-title">Николай Тарасов</h3>
+                <p class="card-content__staff-text" lang="en">Marketing</p>
+
+                <ul class="list staff-social-list">
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-list__card-item">
+              <img src="./images/mihail.jpg" width="270" height="260" alt="Михаил Ермаков" />
+
+              <div class="card-content">
+                <h3 class="card-content__staff-title">Михаил Ермаков</h3>
+                <p class="card-content__staff-text" lang="en">UI Designer</p>
+
+                <ul class="list staff-social-list">
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="staff-social-list__item">
+                    <a href="" class="staff-social-list__link">
+                      <svg class="staff-social-list__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-card"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <section class="section">
         <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
