--- a/portfolio.html
+++ b/portfolio.html
@@ -82,11 +82,11 @@
           </ul>
 
           <ul class="list project-list">
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img src="./images/tehnokryak.jpg" width="370" height="294" alt="Технокряк" />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -99,16 +99,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/poster-neworlean.jpg"
                     width="370"
                     height="294"
                     alt="Постер New Orlean vs Golden Star"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -121,16 +121,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/restaurant-seafood.jpg"
                     width="370"
                     height="294"
                     alt="Ресторан Seafood"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -143,16 +143,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/project-prime.jpg"
                     width="370"
                     height="294"
                     alt="Проект Prime"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -165,16 +165,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/project-boxes.jpg"
                     width="370"
                     height="294"
                     alt="Проект Boxes"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -187,16 +187,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/inspiration-has-no-borders.jpg"
                     width="370"
                     height="294"
                     alt="Inspiration has no Borders"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -209,16 +209,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/izdanie-limited-edition.jpg"
                     width="370"
                     height="294"
                     alt="Издание Limited Edition"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -231,11 +231,11 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img src="./images/project-lab.jpg" width="370" height="294" alt="Проект LAB" />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
@@ -248,16 +248,16 @@
               </a>
             </li>
 
-            <li class="project-item">
-              <a href="" class="project-link">
-                <div class="card-overlay">
+            <li class="project-list__item">
+              <a href="" class="project-list__link">
+                <div class="project-list__card-overlay">
                   <img
                     src="./images/growing-business.jpg"
                     width="370"
                     height="294"
                     alt="Growing Business"
                   />
-                  <p class="overlay-text">
+                  <p class="project-list__overlay-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
